# Wuwa-ini-Tool

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.ko.md  README.md  SECURITY.md  SUPPORT.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.setup.ts
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  option-evidence.yml
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: task-7-report.md
catalog/: options.json  presets.json
catalog/schema/: options.schema.json  presets.schema.json  (+2 more)
scripts/: check-version.mjs  run-windows-rust-tests.ps1  validate-catalog.mjs  verify-icons.mjs  windows-test.manifest
src/: App.test.tsx  App.tsx  contracts.test.ts  contracts.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  maintenance.rs  wire.rs
src-tauri/src/backup_store/: atomic.rs  error.rs  mod.rs  model.rs  retention.rs
src-tauri/src/cache_cleanup/: cleanup.rs  error.rs  mod.rs  model.rs  receipt.rs  validation.rs  windows_cleanup.rs
src-tauri/src/catalog/: mod.rs  model.rs  validation.rs
src-tauri/src/commands/: config.rs  external.rs  mod.rs  runtime.rs
src-tauri/src/game_discovery/: error.rs  keyvalues.rs  mod.rs  paths.rs  windows_registry.rs
src-tauri/src/ini_document/: encoding.rs  error.rs  line.rs  merge.rs  mod.rs
src-tauri/src/process_control/: cpu_set_buffer.rs  error.rs  focus_exclusion_store.rs  focus_mode.rs  focus_mode_system.rs  focus_telemetry_system.rs  mod.rs  model.rs  qos_journal.rs  unsupported.rs  validation.rs  windows.rs
src-tauri/src/profile_store/: error.rs  mod.rs  model.rs
src-tauri/src/supervisor/: events.rs  focus.rs  mod.rs  qos.rs  state.rs  system.rs
src-tauri/tests/: backup_store.rs  cache_cleanup.rs  catalog_profiles.rs  command_facade.rs  focus_mode.rs  game_discovery.rs  game_qos.rs  ini_document.rs  process_control.rs  supervisor.rs  tauri_security.rs
src-tauri/tests/fixtures/: utf16le-crlf.ini  utf8-bom-lf.ini  utf8-crlf.ini
(+39 files in other folders)
