[package]
name = "wuwa-ini-tool"
version = "1.0.0"
description = "A desktop utility for managing Wuthering Waves configuration"
authors = ["Wuwa ini Tool contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "wuwa_ini_tool_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

[target.'cfg(windows)'.dependencies]
windows = "0.62"
